Added navbar component, fully implemented #4

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -3,8 +3,10 @@
   <head>
     <title>Moritz Sokoll</title>
     <link rel="stylesheet" href="/static/styles/index.css">
+    <script type="module" src="/dist/navbar-bundle.js"></script>
   </head>
   <body>
+    <hp-navbar></hp-navbar>
     <div id="page-heading">
       <h1>Moritz Sokoll</h1>
       <h2>Developer and Software Enthusiast</h2>
@@ -12,16 +14,15 @@
 
     <div id="description">
       <p>
-	I'm 15 years old and I live in Germany. I like maths and programming in
-	my free time. I am familiar with a good amount of tools used in the
-	industry such as git, GitHub, Make and others. My programming languages
-	of choice are: C and Rust. I also know at least enough web technologies
-	to make this website. I recently took a course at university on theoretical
-	computer science and passed the exam.
+	I'm a 15 year old high school student from Germany who loves math and
+	programming. I have a decent amount of experience with git, GitHub and
+	GitLab. My programming languages of choice are C and Rust, allthough my
+	knowledge also dips into Python, javascript and a little lisp. For this
+	website I explored the topic of frontend frameworks a little bit and
+	settled on <a href="http://lit.dev">lit</a>. I recently took a course at
+	the University of Greifswald on Theoretical Computer Science and passed
+	the exam.
       </p>
-    </div>
-    <div id="projects_container">
-      <a href="/projects" id="projects_link">Projects</a>
     </div>
   </body>
 </html>
