--- a/static/pages/projects.html
+++ b/static/pages/projects.html
@@ -4,12 +4,14 @@
     <title>Moritz Sokoll - Projects</title>
     <link rel="stylesheet" href="/static/styles/projects.css">
     <script type="module" src="/dist/projects-bundle.js"></script>
+    <script type="module" src="/dist/navbar-bundle.js"></script>
   </head>
   <body>
+    <hp-navbar></hp-navbar>
     <div id="title">
       <h1>Projects</h1>
       <h2>List generated with gitlabs API</h2>
     </div>
-    <projects-list></projects-list>
+    <hp-projects></hp-projects>
   </body>
 </html>
