Implemented a cookie banner

--- a/static/pages/projects.html
+++ b/static/pages/projects.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/static/styles/projects.css">
     <script type="module" src="/dist/projects-bundle.js"></script>
     <script type="module" src="/dist/navbar-bundle.js"></script>
+    <script type="module" src="/dist/cookiebanner-bundle.js"></script>
   </head>
   <body>
     <hp-navbar></hp-navbar>
@@ -13,5 +14,6 @@
       <h2>List generated with gitlabs API</h2>
     </div>
     <hp-projects></hp-projects>
+    <hp-cookiebanner></hp-cookiebanner>
   </body>
 </html>
